# Project1

./: Makefile  build.sh  client
res/models/: halfshinytorus.mtl  shinytorus.mtl  sphere.mtl
res/shaders/basic/: fragment.glsl  vertex.glsl
res/shaders/phong/: fragment.glsl  vertex.glsl
res/textures/: wood.tga
src/main/: CMakeLists.txt  camera.cpp  camera.hpp  geometry.cpp  geometry.hpp  glm_math_includes.hpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  object.cpp  object.hpp  render_state.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/main/interpreters/: wavefront.h
src/math/: mat.hpp  mathdef.hpp  vec.hpp
